--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,32 @@
 @import "tailwindcss";
 
-.common-anchor {
+.border--primary {
+  @apply border-2 border-cyan-300;
+}
+.border--danger {
+  @apply border border-red-500;
+}
+
+.anchor-btn {
   @apply relative text-gray-700 font-medium hover:text-sky-600 transition duration-300;
 }
 
-.common-span {
+.anchor-btn__underline {
   @apply absolute left-0 bottom-0 w-0 h-0.5 bg-sky-600 transition-all duration-300 group-hover:w-full;
+}
+
+.button {
+  @apply py-3 cursor-pointer font-medium text-white bg-sky-600 shadow-lg shadow-sky-500/50 hover:bg-sky-500 rounded-xl inline-flex space-x-2 items-center justify-center;
+}
+
+.form-input {
+  @apply w-full;
+}
+
+.form-select {
+  @apply w-full text-lg text-gray-700 font-normal border-2 border-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md;
+}
+
+.input-profile {
+  @apply w-full p-2 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md;
 }
