--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 .border--danger {
   @apply border border-red-500;
 }
+.text--danger {
+  @apply pl-2 text-red-500;
+}
 
 .anchor-btn {
   @apply relative text-gray-700 font-medium hover:text-sky-600 transition duration-300;
@@ -19,12 +22,16 @@
   @apply py-3 cursor-pointer font-medium text-white bg-sky-600 shadow-lg shadow-sky-500/50 hover:bg-sky-500 rounded-xl inline-flex space-x-2 items-center justify-center;
 }
 
+.title {
+  @apply flex items-center justify-center text-2xl font-bold text-gray-700 uppercase;
+}
+
 .form-input {
-  @apply w-full;
+  @apply w-full p-3 text-lg text-gray-700 font-normal focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md;
 }
 
 .form-select {
-  @apply w-full text-lg text-gray-700 font-normal border-2 border-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md;
+  @apply w-full text-lg text-gray-700 font-normal focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md;
 }
 
 .input-profile {
