--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 }
 
 .title {
-  @apply flex items-center justify-center text-2xl font-bold text-gray-700 uppercase;
+  @apply flex items-center justify-center text-2xl font-bold text-blue-800 uppercase;
 }
 
 .form-input {
