--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   @apply py-3 cursor-pointer font-medium text-white bg-sky-600 shadow-lg shadow-sky-500/50 hover:bg-sky-500 rounded-xl inline-flex space-x-2 items-center justify-center;
 }
 
+.button--danger {
+  @apply py-3 cursor-pointer font-medium text-white bg-rose-600 shadow-lg shadow-rose-500/50 hover:bg-rose-500 rounded-xl inline-flex space-x-2 items-center justify-center;
+}
+
 .title {
   @apply flex items-center justify-center text-2xl font-bold text-blue-800 uppercase;
 }
